  It no longer checks that you're printing a ggplot2 object (so now also
  works with any grid grob) (#970), and always requires a filename.
  Parameter `device` now supports character argument to specify which supported
  device to use ('pdf', 'png', 'jpeg', etc.), for when it cannot be correctly
  inferred from the file extension (for example when a temporary filename is
  supplied server side in shiny apps) (@sebkopf, #939)

* Add access to the new `direction` argument of `scales::brewer_pal` and
  simplify changing the order of colours for `scale_*_brewer` and
  `scale_*_distiller` (@jiho, #1139)

* `facet_wrap()` more carefully checks its `nrow` and `ncol` arguments
  to ensure that they're specified correctly (@richierocks, #962)

* Improved the calculation of segments needed to draw the curve representing
  a line when plotted in polar coordinates. In some cases, the last segment
  of a multi-segment line was not drawn (@BrianDiggs, #952)

* All datasets have class `tbl_df` so if you also use dplyr, you won't
  accidentally print all the data. `economics` has been brought up to date to
  2015-04-01.

* All instances of partial matched dollar expressions were removed (@jimhester,
  #1134)

* `geom_text()` gains `nudge_x` and `nudge_y` arguments to offset labels from
  the x & y position (#1120). `check_overlap = TRUE` provides a simple
  resolution to label overplotting (#1039). `hjust` and `vjust` can now
  be character vectors: "left", "center", "right", "bottom", "middle", "top".
  New options include "inward" and "outward" which align text towards and
  away from the center of the plot respectively.

* `geom_crossbar()` sets grouping correctly so you can display multiple
  crossbars on one plot. It also makes the default `fatten` argument a little
  bigger to make the middle line more obvious (#1125).

* `guide_colorbar()` no longer fails when the legend is empty - previously
  this often masked misspecifications elsewhere in the plot (#967)
